# FlyTracker

./: CMakeLists.txt  README.md  fmf.cpp  fmf.h  main.cpp  tracker.cpp  tracker.h
c++/: CMakeLists.txt  fmf.cpp  fmf.h  main.cpp  tracker.cpp
c++/hungarian/: hungarian.cpp  hungarian.h
c++/hungarian/.svn/: entries
capture/: README.md  capture.py
control/: setup.py  test_odors.txt
control/motmot/control/: control.py  test.py
odd/: Makefile  README.md  runodd.cpp
python/: build.txt  hindsight.py  main.py  setup.py  tracker.py
python/background/: background.cpp  background.h  npinterface.cpp  npinterface.h
